--- a/source/form.html
+++ b/source/form.html
@@ -11,13 +11,10 @@
     <a class="page-header__logo" href="#">
       <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
     </a>
-    <button class="page-header__menu">
-      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="открыть меню">
+    <button class="page-header__menu" type="button">
+      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="меню">
     </button>
-    <button class="page-header__menu">
-      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="закрыть меню">
-    </button>
-    <nav class="main-nav">
+    <nav class="main-nav page-header__menu">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a href="#">Главная</a>
@@ -35,22 +32,21 @@
     </nav>
   </header>
   <main class="page">
-    <h1 class="visually-hidden">Форма для участия в конкурсе</h1>
     <div class="hero">
-      <p class="hero__text">Конкурс на самое безбашенное путешествие с Пинк</p>
+      <h1 class="hero__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </div>
     <p class="page__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>
-    <form class="form-competition" action="https://echo.htmlacademy.ru" method="get">
-      <div class="basic">
+    <form class="form-competition" action="https://echo.htmlacademy.ru" method="post">
+      <fieldset class="basic">
         <label class="basic__label" for="lastname">Фамилия:</label>
         <input class="basic__item" type="text" id="lastname" placeholder="Укажите фамилию *" required>
         <label class="basic__label" for="name">Имя:</label>
         <input class="basic__item" type="text" id="name" placeholder="Введите ваше имя *" required>
         <label class="basic__label" for="secondname">Отчество:</label>
         <input class="basic__item" type="text" id="secondname" placeholder="Ну и отчество тоже">
-      </div>
-      <div class="checkbox">
-        <h3 class="form-competition__title">Ваши безбашенные достижения в путешествии</h3>
+      </fieldset>
+      <fieldset class="checkbox">
+        <legend class="form-competition__title">Ваши безбашенные достижения в путешествии</legend>
         <input class="checkbox__item" type="checkbox" name="achievement" value="shark" id="shark" checked>
         <label class="checkbox__label" for="shark">Сделал селфи с акулой</label>
         <input class="checkbox__item" type="checkbox" name="achievement" value="burn" id="burn" checked>
@@ -63,65 +59,65 @@
         <label class="checkbox__label" for="tower">Удержал башню</label>
         <input class="checkbox__item" type="checkbox" name="achievement" value="hotel" id="hotel">
         <label class="checkbox__label" for="hotel">Разгромил отель</label>
-      </div>
-      <div class="basic">
+      </fieldset>
+      <fieldset class="basic">
         <label class="basic__label" for="phone">Номер телефона:</label>
         <input class="basic__item" type="tel" id="phone" placeholder="Номер, пожалуйста">
         <label class="basic__label" for="address">Адрес почты:</label>
         <input class="basic__item" type="email" id="address" placeholder="Введите почту *" required>
-      </div>
-      <div class="radio">
-        <h3 class="form-competition__title">С каким приложением путешествовали?</h3>
+      </fieldset>
+      <fieldset class="radio">
+        <legend class="form-competition__title">С каким приложением путешествовали?</legend>
         <input class="radio__item" type="radio" name="device" value="ios" id="ios" checked>
         <label class="radio__label" for="ios">Pink для iOS</label>
         <input class="radio__item" type="radio" name="device" value="android" id="android">
         <label class="radio__label" for="android">Pink на Android</label>
         <input class="radio__item" type="radio" name="device" value="windows" id="windows">
         <label class="radio__label" for="windows">Windows Phone</label>
-      </div>
-      <div class="comment">
-        <h3 class="form-competition__title">Опишите свои эмоции</h3>
+      </fieldset>
+      <fieldset class="comment">
+        <legend class="form-competition__title">Опишите свои эмоции</legend>
         <textarea class="comment__item" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-      </div>
+      </fieldset>
       <div class="form-competition__button">
-        <input class="form-competition__send-form" type="submit" value="Отправить форму">
+        <button class="form-competition__send-form" type="submit">Отправить форму</button>
       </div>
       <p class="form-competition__note">* — обязательные поля</p>
     </form>
-    <div class="failure-popup">
-      <h2 class="failure-popup__title">Что-то пошло не так!</h2>
-      <p class="failure-popup__desctiption">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="failure-popup__button">OK</button>
+    <div class="pop-up">
+      <h2 class="pop-up__title">Что-то пошло не так!</h2>
+      <p class="pop-up__desctiption">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="pop-up__button" type="button">OK</button>
     </div>
-    <div class="success-popup">
-      <h2 class="success-popup__title">Ваша заявка отправлена</h2>
-      <p class="success-popup__descriplion">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <button class="success-popup__button">Закрыть окно</button>
+    <div class="pop-up">
+      <h2 class="pop-up__title">Ваша заявка отправлена</h2>
+      <p class="pop-up__descriplion">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      <button class="pop-up__button pop-up__button--success" type="button">Закрыть окно</button>
     </div>
   </main>
   <footer class="page-footer">
     <a class="page-footer__logo" href="#">
-      <img class="competition-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Windows">
+      <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
     </a>
     <ul class="social">
       <li class="social__item">
-        <a href="#">
-          <img class="social__image" src="http://placehold.it/150x100" width="150" height="100" alt="twitter">
+        <a href="#" class="social__link--twitter">
+          <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#">
-          <img class="social__image" src="http://placehold.it/150x100" width="150" height="100" alt="facebook">
+        <a href="#" class="social__link--facebook">
+          <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#">
-          <img class="social__image" src="http://placehold.it/150x100" width="150" height="100" alt="youtube">
+        <a href="#" class="social__link--youtube">
+          <span class="visually-hidden">ссылка на youtube</span>
         </a>
       </li>
     </ul>
     <p class="page-footer__credits">
-      Разработано <a href="#"><img class="credits__academy-logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип html academy"></a>
+      Разработано <a href="#"><img class="page-footer__academy-logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип html academy"></a>
     </p>
   </footer>
 </body>
