--- a/source/index.html
+++ b/source/index.html
@@ -8,19 +8,16 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__logo" href="#">
+    <a class="page-header__logo">
       <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
     </a>
-    <button class="page-header__menu">
-      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="открыть меню">
+    <button class="page-header__menu" type="button">
+      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="меню">
     </button>
-    <button class="page-header__menu">
-      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="закрыть меню">
-    </button>
-    <nav class="main-nav">
+    <nav class="main-nav page-header__menu">
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a href="#">Главная</a>
+          <a>Главная</a>
         </li>
         <li class="main-nav__item">
           <a href="#">Фотографии</a>
@@ -35,31 +32,31 @@
     </nav>
   </header>
   <main class="page">
-    <h1 class="visually-hidden">Пинк главная</h1>
+    <h1 class="visually-hidden">Пинк</h1>
     <div class="hero">
-      <img class="hero__hero-image" src="http://placehold.it/150x100" width="150" height="100" alt="Смартфон с приложением">
+      <img class="hero__image" src="http://placehold.it/150x100" width="150" height="100" alt="Смартфон с приложением">
     </div>
     <section class="intro">
-      <h2 class="visually-hidden">Скачать приложение</h2>
+      <h2 class="visually-hidden">Наше приложение</h2>
       <a class="intro__download" href="#">Скачайте приложение</a>
       <ul class="intro__device device">
-        <li class="social__item">
-          <a href="#">
-            <img class="device__image" src="http://placehold.it/150x100" width="150" height="100" alt="iOS">
+        <li class="device__item">
+          <a href="#" class="device__link device__link-ios">
+            <span class="visually-hidden">приложение для iOS</span>
           </a>
         </li>
         <li class="device__item">
-          <a href="#">
-            <img class="device__image" src="http://placehold.it/150x100" width="150" height="100" alt="Android">
+          <a href="#" class="device__link device__link-android">
+            <span class="visually-hidden">приложение для Android</span>
           </a>
         </li>
-        <li class="device__item">
+        <li class="device__link device__link-windows">
           <a href="#">
-            <img class="device__image" src="http://placehold.it/150x100" width="150" height="100" alt="Windows">
+            <span class="visually-hidden">приложение для Windows</span>
           </a>
         </li>
       </ul>
-      <p class="intro_download-description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+      <p class="intro__download-description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
     </section>
     <section class="information">
       <h2 class="visually-hidden">О приложении</h2>
@@ -86,64 +83,70 @@
       </div>
     </section>
     <section class="review">
-      <ul class="review__list">
-        <li class="review__item">
-          <h3 class="review__name">Николай Петров</h3>
-          <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-        </li>
-        <li class="review__item">
-          <h3 class="review__name">Николай Петров</h3>
-          <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-        </li>
-        <li class="review__item">
-          <h3 class="review__name">Николай Петров</h3>
-          <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-        </li>
-      </ul>
-      <ul class="review__dots page-dots">
-        <li class="page-dots__item page-dots__item--active"></li>
-        <li class="page-dots__item"></li>
-        <li class="page-dots__item"></li>
-      </ul>
+      <h2 class="visually-hidden">Отзывы пользователей</h2>
+      <div class="advantages__wrapper slider">
+        <ul class="review__list slider__list">
+          <li class="review__item slider__item">
+            <p class="review__name">Николай Петров</p>
+            <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </li>
+          <li class="review__item slider__item">
+            <p class="review__name">Николай Петров</p>
+            <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </li>
+          <li class="review__item slider__item">
+            <p class="review__name">Николай Петров</p>
+            <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </li>
+        </ul>
+        <p class="review__toggles slider__toggles">
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+        </p>
+      </div>
     </section>
     <section class="price">
       <h2 class="visually-hidden">Пакеты приложения</h2>
-      <ul class="price__packages packages">
-        <li class="packages__item">
-          <h3 class="packages__title">База</h3>
-          <p class="packages__price">1,99 USD</p>
-          <ul class="packages__description">
-            <li class="packages__include packages__include--true">Розовый фильтр</li>
-            <li class="packages__include packages__include--false">Смайлики</li>
-            <li class="packages__include packages__include--false">Комментарии</li>
-          </ul>
-        </li>
-        <li class="packages__item packages__item--hit">
-          <h3 class="packages__title">Стандарт</h3>
-          <p class="packages__price">3,99 USD</p>
-          <ul class="packages__description">
-            <li class="packages__include packages__include--true">Розовый фильтр</li>
-            <li class="packages__include packages__include--true">Смайлики</li>
-            <li class="packages__include packages__include--false">Комментарии</li>
-          </ul>
-        </li>
-        <li class="packages__item">
-          <h3 class="packages__title">Анлим</h3>
-          <p class="packages__price">9,99 USD</p>
-          <ul class="packages__description">
-            <li class="packages__include packages__include--true">Розовый фильтр</li>
-            <li class="packages__include packages__include--true">Смайлики</li>
-            <li class="packages__include packages__include--true">Комментарии</li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="price__dots page-dots">
-        <li class="page-dots__item"></li>
-        <li class="page-dots__item page-dots__item--active"></li>
-        <li class="page-dots__item"></li>
-      </ul>
+      <div class="advantages__wrapper slider">
+        <ul class="price__packages packages  slider__list">
+          <li class="packages__item slider__item">
+            <h3 class="packages__title">База</h3>
+            <p class="packages__price">1,99 USD</p>
+            <ul class="packages__description">
+              <li class="packages__include packages__include--true">Розовый фильтр <span class="visually-hidden">доступно</span></li>
+              <li class="packages__include packages__include--false">Смайлики <span class="visually-hidden">недоступно</span></li>
+              <li class="packages__include packages__include--false">Комментарии <span class="visually-hidden">недоступно</span></li>
+            </ul>
+          </li>
+          <li class="packages__item packages__item--hit slider__item">
+            <h3 class="packages__title">Стандарт</h3>
+            <p class="packages__price">3,99 USD</p>
+            <ul class="packages__description">
+              <li class="packages__include packages__include--true">Розовый фильтр <span class="visually-hidden">доступно</span></li>
+              <li class="packages__include packages__include--true">Смайлики <span class="visually-hidden">доступно</span></li>
+              <li class="packages__include packages__include--false">Комментарии <span class="visually-hidden">недоступно</span></li>
+            </ul>
+          </li>
+          <li class="packages__item slider__item">
+            <h3 class="packages__title">Анлим</h3>
+            <p class="packages__price">9,99 USD</p>
+            <ul class="packages__description">
+              <li class="packages__include packages__include--true">Розовый фильтр <span class="visually-hidden">доступно</span></li>
+              <li class="packages__include packages__include--true">Смайлики <span class="visually-hidden">доступно</span></li>
+              <li class="packages__include packages__include--true">Комментарии <span class="visually-hidden">доступно</span></li>
+            </ul>
+          </li>
+        </ul>
+        <p class="review__toggles slider__toggles">
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+        </p>
+      </div>
     </section>
     <section class="contact-us">
+      <h2 class="visually-hidden">Наши контакты</h2>
       <div class="contacts">
         <p class="contacts__question">Остались вопросы?<br> Свяжитесь с нами!</p>
         <ul class="contacts-list">
@@ -165,29 +168,29 @@
       <div class="map"></div>
     </section>
   </main>
-  <footer class="page-foter main-foter--mobile-hidden">
-    <a class="page-footer__logo" href="#">
-      <img class="competition-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Windows">
+  <footer class="page-foter page-foter--mobile-hidden">
+    <a class="page-footer__logo">
+      <img class="page-foter__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
     </a>
     <ul class="social">
       <li class="social__item">
-        <a href="#">
-          <img class="social__image" src="http://placehold.it/150x100" width="150" height="100" alt="twitter">
+        <a href="#" class="social__link--twitter">
+          <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#">
-          <img class="social__image" src="http://placehold.it/150x100" width="150" height="100" alt="facebook">
+        <a href="#" class="social__link--facebook">
+          <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#">
-          <img class="social__image" src="http://placehold.it/150x100" width="150" height="100" alt="youtube">
+        <a href="#" class="social__link--youtube">
+          <span class="visually-hidden">ссылка на youtube</span>
         </a>
       </li>
     </ul>
     <p class="page-footer__credits">
-      Разработано <a href="#"><img class="credits__academy-logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип html academy"></a>
+      Разработано <a href="#"><img class="page-footer__academy-logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип html academy"></a>
     </p>
   </footer>
 </body>
