--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,13 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
-    </a>
-    <button class="page-header__menu" type="button">
-      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="меню">
-    </button>
     <nav class="main-nav page-header__menu">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
+      </a>
+      <button class="page-header__menu">
+        <span class="visually-hidden">Меню</span>
+      </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a>Главная</a>
@@ -41,16 +41,16 @@
       <a class="intro__download" href="#">Скачайте приложение</a>
       <ul class="intro__device device">
         <li class="device__item">
-          <a href="#" class="device__link device__link-ios">
+          <a href="#" class="device__link device__link--ios">
             <span class="visually-hidden">приложение для iOS</span>
           </a>
         </li>
         <li class="device__item">
-          <a href="#" class="device__link device__link-android">
+          <a href="#" class="device__link device__link--android">
             <span class="visually-hidden">приложение для Android</span>
           </a>
         </li>
-        <li class="device__link device__link-windows">
+        <li class="device__link device__link--windows">
           <a href="#">
             <span class="visually-hidden">приложение для Windows</span>
           </a>
@@ -84,7 +84,7 @@
     </section>
     <section class="review">
       <h2 class="visually-hidden">Отзывы пользователей</h2>
-      <div class="advantages__wrapper slider">
+      <div class="review__wrapper slider">
         <ul class="review__list slider__list">
           <li class="review__item slider__item">
             <p class="review__name">Николай Петров</p>
@@ -108,8 +108,8 @@
     </section>
     <section class="price">
       <h2 class="visually-hidden">Пакеты приложения</h2>
-      <div class="advantages__wrapper slider">
-        <ul class="price__packages packages  slider__list">
+      <div class="price__wrapper slider">
+        <ul class="price__packages packages slider__list">
           <li class="packages__item slider__item">
             <h3 class="packages__title">База</h3>
             <p class="packages__price">1,99 USD</p>
@@ -168,23 +168,23 @@
       <div class="map"></div>
     </section>
   </main>
-  <footer class="page-foter page-foter--mobile-hidden">
+  <footer class="page-footer page-footer--mobile-hidden">
     <a class="page-footer__logo">
-      <img class="page-foter__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
+      <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
     </a>
     <ul class="social">
       <li class="social__item">
-        <a href="#" class="social__link--twitter">
+        <a href="#" class="social__link social__link--twitter">
           <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#" class="social__link--facebook">
+        <a href="#" class="social__link social__link--facebook">
           <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#" class="social__link--youtube">
+        <a href="#" class="social__link social__link--youtube">
           <span class="visually-hidden">ссылка на youtube</span>
         </a>
       </li>
