--- a/source/photo.html
+++ b/source/photo.html
@@ -8,13 +8,13 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__logo" href="#">
-      <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
-    </a>
-    <button class="page-header__menu">
-      <img class="page-header__menu-button" src="http://placehold.it/150x100" width="150" height="100" alt="меню">
-    </button>
     <nav class="main-nav page-header__menu">
+      <a class="page-header__logo" href="#">
+        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
+      </a>
+      <button class="page-header__menu">
+        <span class="visually-hidden">Меню</span>
+      </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a>Главная</a>
@@ -40,7 +40,6 @@
       <h4 class="visually-hidden">Фотографии пользователей</h4>
       <ul class="users-posts">
         <li class="users-posts__item users-posts__item--pano">
-          <h4 class="visually-hidden">Пано дня</h4>
           <a href="#"><img class="users-posts__image users-posts__image--pano" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
           <p class="users-posts__author">Анна</p>
           <p class="users-posts__time">(5 минут назад)</p>
@@ -126,17 +125,17 @@
     </a>
     <ul class="social">
       <li class="social__item">
-        <a href="#" class="social__link--twitter">
+        <a href="#" class="social__link social__link--twitter">
           <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#" class="social__link--facebook">
+        <a href="#" class="social__link social__link--facebook">
           <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
       <li class="social__item">
-        <a href="#" class="social__link--youtube">
+        <a href="#" class="social__link social__link--youtube">
           <span class="visually-hidden">ссылка на youtube</span>
         </a>
       </li>
