--- a/source/photo.html
+++ b/source/photo.html
@@ -40,6 +40,7 @@
       <h4 class="visually-hidden">Фотографии пользователей</h4>
       <ul class="users-posts">
         <li class="users-posts__item users-posts__item--pano">
+          <p class="users-posts__title users-posts__title--pano">Панорама дня</p>
           <a href="#"><img class="users-posts__image users-posts__image--pano" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
           <p class="users-posts__author">Анна</p>
           <p class="users-posts__time">(5 минут назад)</p>
