--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -33,11 +34,13 @@
   </header>
   <main class="page">
     <div class="hero">
-      <h1 class="hero__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <div class="hero__title">
+        <h1 class="hero__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      </div>
     </div>
     <p class="page__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>
     <form class="form-competition" action="https://echo.htmlacademy.ru" method="post">
-      <fieldset class="form-competition__set form-competition__set--white">
+      <fieldset class="form-competition__set form-competition__set--light">
         <label class="form-competition__text-label" for="lastname">Фамилия:</label>
         <input class="form-competition__text" type="text" id="lastname" placeholder="Укажите фамилию *" required>
         <label class="form-competition__text-label" for="name">Имя:</label>
@@ -45,54 +48,62 @@
         <label class="form-competition__text-label" for="secondname">Отчество:</label>
         <input class="form-competition__text" type="text" id="secondname" placeholder="Ну и отчество тоже">
       </fieldset>
-      <fieldset class="form-competition__set form-competition__set--gray">
+      <fieldset class="form-competition__set form-competition__set--dark">
         <legend class="form-competition__title">Ваши безбашенные достижения в путешествии</legend>
         <input class="form-competition__checkbox" type="checkbox" name="achievement" value="shark" id="shark" checked>
-        <label class="form-competition__item" for="shark">Сделал селфи с акулой</label>
+        <label class="form-competition__item-label" for="shark">Сделал селфи с акулой</label>
         <input class="form-competition__checkbox" type="checkbox" name="achievement" value="burn" id="burn" checked>
-        <label class="form-competition__item" for="burn">Обгорел на пляже</label>
+        <label class="form-competition__item-label" for="burn">Обгорел на пляже</label>
         <input class="form-competition__checkbox" type="checkbox" name="achievement" value="chack" id="chack">
-        <label class="form-competition__item" for="chack">Видел Чака Норриса</label>
+        <label class="form-competition__item-label" for="chack">Видел Чака Норриса</label>
         <input class="form-competition__checkbox" type="checkbox" name="achievement" value="gift" id="gift">
-        <label class="form-competition__item" for="gift">Накупил сувениров</label>
+        <label class="form-competition__item-label" for="gift">Накупил сувениров</label>
         <input class="form-competition__checkbox" type="checkbox" name="achievement" value="tower" id="tower" checked>
-        <label class="form-competition__item" for="tower">Удержал башню</label>
+        <label class="form-competition__item-label" for="tower">Удержал башню</label>
         <input class="form-competition__checkbox" type="checkbox" name="achievement" value="hotel" id="hotel">
-        <label class="form-competition__item" for="hotel">Разгромил отель</label>
+        <label class="form-competition__item-label" for="hotel">Разгромил отель</label>
       </fieldset>
-      <fieldset class="form-competition__set form-competition__set--white">
+      <fieldset class="form-competition__set form-competition__set--light">
         <label class="form-competition__text-label" for="phone">Номер телефона:</label>
         <input class="form-competition__text" type="tel" id="phone" placeholder="Номер, пожалуйста">
         <label class="form-competition__text-label" for="address">Адрес почты:</label>
         <input class="form-competition__text" type="email" id="address" placeholder="Введите почту *" required>
       </fieldset>
-      <fieldset class="form-competition__set form-competition__set--gray">
+      <fieldset class="form-competition__set form-competition__set--dark">
         <legend class="form-competition__title">С каким приложением путешествовали?</legend>
         <input class="form-competition__radio" type="radio" name="device" value="ios" id="ios" checked>
-        <label class="form-competition__item" for="ios">Pink для iOS</label>
+        <label class="form-competition__item-label" for="ios">Pink для iOS</label>
         <input class="form-competition__radio" type="radio" name="device" value="android" id="android">
-        <label class="form-competition__item" for="android">Pink на Android</label>
+        <label class="form-competition__item-label" for="android">Pink на Android</label>
         <input class="form-competition__radio" type="radio" name="device" value="windows" id="windows">
-        <label class="form-competition__item" for="windows">Windows Phone</label>
+        <label class="form-competition__item-label" for="windows">Windows Phone</label>
       </fieldset>
-      <fieldset class="form-competition__set form-competition__set--white">
+      <fieldset class="form-competition__set form-competition__set--light">
         <legend class="form-competition__title">Опишите свои эмоции</legend>
         <textarea class="form-competition__comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
       </fieldset>
       <div class="form-competition__button">
         <button class="form-competition__send-form" type="submit">Отправить форму</button>
       </div>
-      <p class="form-competition__note">* — обязательные поля</p>
+      <p class="form-competition__note"><span class="form-competition__colored-text">*</span> — обязательные поля</p>
     </form>
     <div class="pop-up">
-      <h2 class="pop-up__title">Что-то пошло не так!</h2>
-      <p class="pop-up__desctiption">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="pop-up__button" type="button">OK</button>
+      <div class="pop-up__text">
+        <h2 class="pop-up__title">Что-то пошло не так!</h2>
+        <p class="pop-up__desctiption">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      </div>
+      <div class="pop-up__button-place">
+        <button class="pop-up__button" type="button">OK</button>
+      </div>
     </div>
     <div class="pop-up">
-      <h2 class="pop-up__title">Ваша заявка отправлена</h2>
-      <p class="pop-up__descriplion">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <button class="pop-up__button pop-up__button--success" type="button">Закрыть окно</button>
+      <div class="pop-up__text">
+        <h2 class="pop-up__title">Ваша заявка отправлена</h2>
+        <p class="pop-up__descriplion">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      </div>
+      <div class="pop-up__button-place pop-up__button-place--success">
+        <button class="pop-up__button" type="button">Закрыть окно</button>
+      </div>
     </div>
   </main>
   <footer class="page-footer">
