--- a/source/photo.html
+++ b/source/photo.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -33,92 +34,150 @@
   </header>
   <main class="page">
     <div class="hero">
-      <h1 class="hero__text">Фотографии пользователей</h1>
+      <div class="hero__title">
+        <h1 class="hero__text">Фотографии пользователей</h1>
+      </div>
     </div>
     <p class="page__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-    <section class="photos">
-      <h4 class="visually-hidden">Фотографии пользователей</h4>
-      <ul class="users-posts">
-        <li class="users-posts__item users-posts__item--pano">
-          <p class="users-posts__title users-posts__title--pano">Панорама дня</p>
-          <a href="#"><img class="users-posts__image users-posts__image--pano" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Анна</p>
-          <p class="users-posts__time">(5 минут назад)</p>
+    <ul class="users-posts">
+      <li class="users-posts__item users-posts__item--pano">
+        <p class="users-posts__title">Панорама дня</p>
+        <div class="users-posts__photo users-posts__photo--pano">
+          <a href="#">
+            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+          </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Анна</p>
+            <p class="users-posts__time">(5 минут назад)</p>
+          </p>
           <p class="users-posts__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
           <p class="users-posts__like">Нравится: 215</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Левон</p>
-          <p class="users-posts__time">(5 часов назад)</p>
+        </div>
+      </li>
+      <li class="users-posts__item">
+        <div class="users-posts__photo">
+          <a href="#">
+            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+          </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Левон</p>
+            <p class="users-posts__time">(5 часов назад)</p>
+          </p>
           <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
           <p class="users-posts__like">Нравится: 356</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Антон</p>
-          <p class="users-posts__time">(12 часов назад)</p>
+        </div>
+      </li>
+      <li class="users-posts__item">
+        <div class="users-posts__photo">
+          <a href="#">
+            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+          </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Антон</p>
+            <p class="users-posts__time">(12 часов назад)</p>
+          </p>
           <p class="users-posts__description">Соседи будут рады!</p>
           <p class="users-posts__like">Нравится: 666</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Анна</p>
-          <p class="users-posts__time">(5 минут назад)</p>
-          <p class="users-posts__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-          <p class="users-posts__like">Нравится: 215</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Борис</p>
-          <p class="users-posts__time">(20 часов назад)</p>
+        </div>
+      </li>
+      <li class="users-posts__item">
+        <div class="users-posts__photo">
+          <a href="#">
+            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+          </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Борис</p>
+            <p class="users-posts__time">(20 часов назад)</p>
+          </p>
           <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
           <p class="users-posts__like">Нравится: 215</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Сергей</p>
-          <p class="users-posts__time">(25 часов назад)</p>
+        </div>
+      </li>
+      <li class="users-posts__item">
+        <div class="users-posts__photo">
+          <a href="#">
+            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+          </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Сергей</p>
+            <p class="users-posts__time">(25 часов назад)</p>
+          </p>
           <p class="users-posts__description">Самая кубанская в мире!</p>
           <p class="users-posts__like">Нравится: 4</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Максим</p>
-          <p class="users-posts__time">(40 часов назад)</p>
+        </div>
+      </li>
+      <li class="users-posts__item">
+        <div class="users-posts__photo">
+          <a href="#">
+          <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+        </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Максим</p>
+            <p class="users-posts__time">(40 часов назад)</p>
+          </p>
           <p class="users-posts__description">Где снег-то?</p>
           <p class="users-posts__like">Нравится: 150</p>
-        </li>
-        <li class="users-posts__item">
-          <a href="#"><img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя"></a>
-          <p class="users-posts__author">Надежда</p>
-          <p class="users-posts__time">(45 часов назад)</p>
+        </div>
+      </li>
+      <li class="users-posts__item">
+        <div class="users-posts__photo">
+          <a href="#">
+            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+          </a>
+        </div>
+        <div class="users-posts__article">
+          <p class="users-posts__head">
+            <p class="users-posts__author">Надежда</p>
+            <p class="users-posts__time">(45 часов назад)</p>
+          </p>
           <p class="users-posts__description">Всем GM и взаимные лайки!</p>
           <p class="users-posts__like">Нравится: 2560</p>
-        </li>
-      </ul>
-    </section>
+        </div>
+      </li>
+    </ul>
     <p class="page__description">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
-    <section class="user-upload">
+    <form class="user-upload" action="https://echo.htmlacademy.ru" method="post">
       <h4 class="visually-hidden">Загрузить фотографию</h4>
-      <img class="user-upload__photo" src="http://placehold.it/150x100" width="150" height="100" alt="загружаемое фото">
+      <div class="user-upload__photo">
+        <img class="user-upload__image" src="http://placehold.it/150x100" width="150" height="100" alt="загружаемое фото">
+      </div>
       <ul class="edit">
-        <li class="edit__item edit__item--active">
-          <span class="visually-hidden">обрезать фото</span>
+        <li class="edit__item">
+          <p class="edit__tool edit__tool--active">
+            <span class="visually-hidden">обрезать фото</span>
+          </p>
           <input class="edit__range" type="range" min="0" max="50" step="1" value="40">
         </li>
         <li class="edit__item">
-          <img class="edit__tool" src="http://placehold.it/150x100" width="150" height="100" alt="поменять цвет">
+          <p class="edit__tool">
+            <span class="visually-hidden">поменять цвет</span>
+          </p>
           <input class="edit__range" type="range" min="0" max="50" step="1" value="0">
         </li>
         <li class="edit__item">
-          <span class="visually-hidden">изменить контраст</span>
+          <p class="edit__tool">
+            <span class="visually-hidden">изменить контраст</span>
+          </p>
           <input class="edit__range" type="range" min="0" max="50" step="1" value="0">
         </li>
       </ul>
-      <button class="user-upload__button" type="submit">Запостить</button>
-      <button class="user-upload__button user-upload__button--disabled" type="reset" disabled>Отмена</button>
-    </section>
+      <div class="user-upload__buttons">
+        <button class="user-upload__button user-upload__button--upload" type="submit">Запостить</button>
+        <button class="user-upload__button user-upload__button--cancel" type="reset">Отмена</button>
+      </div>
+    </form>
   </main>
   <footer class="page-footer">
     <a class="page-footer__logo" href="#">
